k8s-lab-cluster/cluster/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure

---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---

apiVersion: v1
kind: Namespace
metadata:
  name: applications
